force-app/main/default/objects/XLI_Technical_Attribute__c/XLI_Technical_Attribute__c.object-meta.xml
<CustomObject>
    <label>XLI Technical Attribute</label>
    <nameField>
        <displayFormat>XLI-{000000}</displayFormat>
        <label>XLI Technical Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XLI Technical Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>