force-app/main/default/objects/XLI_Technical_Attribute__c/fields/AttributeMetadataChanges__c.field-meta.xml
<CustomField>
    <fullName>AttributeMetadataChanges__c</fullName>
    <label>AttributeMetadataChanges</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>