force-app/main/default/objects/XLI_Technical_Attribute__c/fields/Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>XLI Technical Attributes</relationshipLabel>
    <relationshipName>XLI_Technical_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>