force-app/main/default/objects/XLI_Technical_Attribute__c/fields/Root_Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Root_Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Root Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>XLI Technical Attributes (Root Quote Line Item)</relationshipLabel>
    <relationshipName>XLI_Technical_Attributes1</relationshipName>
    <type>Lookup</type>
</CustomField>