force-app/main/default/objects/XLI_Technical_Attribute__c/fields/Technical_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Technical_Attribute__c</fullName>
    <description>Same as vlocity_cmt__AttributeSelectedValues__c</description>
    <label>Technical Attribute</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>