force-app/main/default/objects/XLI_Technical_Attribute__c/fields/Technical_Attribute_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Technical_Attribute_Metadata__c</fullName>
    <label>Technical Attribute Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>