force-app/main/default/objects/XLI_Technical_Attribute__c/fields/Technical_Product__c.field-meta.xml
<CustomField>
    <fullName>Technical_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>XLI Technical Attributes</relationshipLabel>
    <relationshipName>XLI_Technical_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>